Fix usage of deprecated static method InjectedLanguage.getAvailableLanguageIDs